--- a/SimuladorDeProcesos/SimuladorDeProcesos.csproj
+++ b/SimuladorDeProcesos/SimuladorDeProcesos.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Logica\Proceso.cs" />
+    <Compile Include="Logica\ProcesoSRTF.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
